--- a/algebra_canny_edge-master/Proyecto Algebra Lineal.ipynb
+++ b/algebra_canny_edge-master/Proyecto Algebra Lineal.ipynb
@@ -68,43 +68,164 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def SblFltrX(img, kernel = 3):\n",
+    "        D=img\n",
+    "        E=D.shape[0]\n",
+    "        F=D.shape[1]\n",
+    "\n",
+    "        Vert=np.zeros((E,F)) #Matrices para llenado\n",
+    "        XY=np.zeros((E,F))\n",
+    "        \n",
+    "        VKernel= np.array([[-1,0,1],\n",
+    "                           [-2,0,2],\n",
+    "                           [-1,0,1]],dtype=np.float) #Vertical\n",
+    "        n=VKernel.sum()\n",
+    "        VKernel=VKernel/n\n",
+    "\n",
+    "        G=np.zeros((E+2,F+2)) \n",
+    "        H=G.shape[0]\n",
+    "        I=G.shape[1]\n",
+    "\n",
+    "        HKernel= np.array([[1,2,1],\n",
+    "                           [0,0,0],\n",
+    "                           [-1,-2,-1]],dtype=np.float) #Horizontal\n",
+    "        \n",
+    "        nu=HKernel.sum()\n",
+    "        HKernel=HKernel/nu\n",
+    "        Op=np.empty((3,3))\n",
+    "\n",
+    "        for i in range(0,E-1): \n",
+    "            for j in range(0,F-1):\n",
+    "                    G[i+1][j+1]=D[i][j]\n",
+    "            \n",
+    "\n",
+    "        for i in range(0,H-3): \n",
+    "            for j in range(0,I-3):\n",
+    "                \n",
+    "                for k in range (0,3):\n",
+    "                    for l in range (0,3):\n",
+    "                        Op[k][l]=G[i+k][j+l]                \n",
+    "              \n",
+    "                prom=(Op*HKernel).sum()\n",
+    "                D[i][j]=prom \n",
+    "                D[i][j]=sqrt((D[i][j]**2)) #Horizontal \n",
+    "                \n",
+    "        return D\n",
+    "          \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def SblFltrY(img, kernel = 3):\n",
+    "        D=img\n",
+    "        E=D.shape[0]\n",
+    "        F=D.shape[1]\n",
+    "\n",
+    "        Vert=np.zeros((E,F)) #Matrices para llenado\n",
+    "        XY=np.zeros((E,F))\n",
+    "        \n",
+    "        VKernel= np.array([[-1,0,1],\n",
+    "                           [-2,0,2],\n",
+    "                           [-1,0,1]],dtype=np.float) #Vertical\n",
+    "        n=VKernel.sum()\n",
+    "        VKernel=VKernel/n\n",
+    "\n",
+    "        G=np.zeros((E+2,F+2)) \n",
+    "        H=G.shape[0]\n",
+    "        I=G.shape[1]\n",
+    "\n",
+    "        HKernel= np.array([[1,2,1],\n",
+    "                           [0,0,0],\n",
+    "                           [-1,-2,-1]],dtype=np.float) #Horizontal\n",
+    "        \n",
+    "        nu=HKernel.sum()\n",
+    "        HKernel=HKernel/nu\n",
+    "        Op=np.empty((3,3))\n",
+    "\n",
+    "        for i in range(0,E-1): \n",
+    "            for j in range(0,F-1):\n",
+    "                    G[i+1][j+1]=D[i][j]\n",
+    "            \n",
+    "\n",
+    "        for i in range(0,H-3): \n",
+    "            for j in range(0,I-3):\n",
+    "                \n",
+    "                for k in range (0,3):\n",
+    "                    for l in range (0,3):\n",
+    "                        Op[k][l]=G[i+k][j+l]                \n",
+    "                \n",
+    "                pr=(Op*VKernel).sum()\n",
+    "                Vert[i][j]=pr\n",
+    "                Vert[i][j]=sqrt((Vert[i][j]**2)) #Vertical\n",
+    "\n",
+    "        return Vert          \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "    D =img\n",
-    "    E=D.shape[0]\n",
-    "    F=D.shape[1]\n",
+    "def SblFltrXY(img, kernel = 3):\n",
+    "        D=img\n",
+    "        E=D.shape[0]\n",
+    "        F=D.shape[1]\n",
     "\n",
+    "        Vert=np.zeros((E,F)) #Matrices para llenado\n",
+    "        XY=np.zeros((E,F))\n",
+    "        \n",
+    "        VKernel= np.array([[-1,0,1],\n",
+    "                           [-2,0,2],\n",
+    "                           [-1,0,1]],dtype=np.float) #Vertical\n",
+    "        n=VKernel.sum()\n",
+    "        VKernel=VKernel/n\n",
     "\n",
-    "    G=np.zeros((E+2,F+2))\n",
-    "    H=G.shape[0]\n",
-    "    I=G.shape[1]\n",
+    "        G=np.zeros((E+2,F+2)) \n",
+    "        H=G.shape[0]\n",
+    "        I=G.shape[1]\n",
     "\n",
-    "    SKernel= np.array([[1,2,1],[0,0,0],[-1,-2,-1]],dtype=np.float)\n",
-    "    nu=SKernel.sum()\n",
-    "    SKernel=SKernel/nu\n",
-    "    Op=np.empty((3,3))\n",
-    "    \n",
-    "    for i in range(0,E-1): \n",
-    "        for j in range(0,F-1):\n",
-    "                G[i+1][j+1]=D[i][j]\n",
+    "        HKernel= np.array([[1,2,1],\n",
+    "                           [0,0,0],\n",
+    "                           [-1,-2,-1]],dtype=np.float) #Horizontal\n",
+    "        \n",
+    "        nu=HKernel.sum()\n",
+    "        HKernel=HKernel/nu\n",
+    "        Op=np.empty((3,3))\n",
     "\n",
-    "           \n",
-    "    for i in range(0,H-3): \n",
-    "        for j in range(0,I-3):\n",
-    "            q=0\n",
-    "            w=j\n",
-    "\n",
-    "            for k in range (0,3):\n",
-    "                for l in range (0,3):\n",
-    "                    Op[k][l]=G[i+k][j+l]                \n",
-    "        #print Op    \n",
-    "            prom=(Op*SKernel).sum()\n",
-    "            D[i][j]=prom\n",
-    "      \n",
+    "        for i in range(0,E-1): \n",
+    "            for j in range(0,F-1):\n",
+    "                    G[i+1][j+1]=D[i][j]\n",
     "            \n",
-    "    return D           \n"
+    "\n",
+    "        for i in range(0,H-3): \n",
+    "            for j in range(0,I-3):\n",
+    "                \n",
+    "                for k in range (0,3):\n",
+    "                    for l in range (0,3):\n",
+    "                        Op[k][l]=G[i+k][j+l]                \n",
+    "              \n",
+    "                prom=(Op*HKernel).sum()\n",
+    "                D[i][j]=prom \n",
+    "                D[i][j]=sqrt((D[i][j]**2)) #Horizontal \n",
+    "                \n",
+    "                pr=(Op*VKernel).sum()\n",
+    "                Vert[i][j]=pr\n",
+    "                Vert[i][j]=sqrt((Vert[i][j]**2)) #Vertical\n",
+    "        return D, Vert\n",
+    "          \n"
    ]
   },
   {
@@ -126,7 +247,11 @@
     "    H=G.shape[0]\n",
     "    I=G.shape[1]\n",
     "\n",
-    "    GKernel= np.array([[2,7,12,7,2],[7,31,52,31,7],[12,52,127,52,12],[7,31,52,31,7],[2,7,12,7,2]],dtype=np.float)\n",
+    "    GKernel= np.array([[2,7,12,7,2],\n",
+    "                       [7,31,52,31,7],\n",
+    "                       [12,52,127,52,12],\n",
+    "                       [7,31,52,31,7],\n",
+    "                       [2,7,12,7,2]],dtype=np.float)\n",
     "    nu=GKernel.sum()\n",
     "    GKernel=GKernel/nu\n",
     "    Op=np.empty((5,5))\n",
@@ -140,17 +265,12 @@
     "           \n",
     "    for i in range(0,H-5): \n",
     "        for j in range(0,I-5):\n",
-    "            q=0\n",
-    "            w=j\n",
-    "\n",
+    "        \n",
     "            for k in range (0,5):\n",
     "                for l in range (0,5):\n",
-    "                    Op[k][l]=G[i+k][j+l]                \n",
-    "        #print Op    \n",
+    "                    Op[k][l]=G[i+k][j+l]                   \n",
     "            prom=(Op*GKernel).sum()\n",
-    "            D[i][j]=prom\n",
-    "      \n",
-    "            \n",
+    "            D[i][j]=prom   \n",
     "    return D           \n",
     "    \n",
     "\n",
@@ -176,7 +296,7 @@
     "        x,y = 0,1\n",
     "        \n",
     "    '''Modificar esta función'''\n",
-    "    sobel = cv2.Sobel(img, cv2.CV_64F, x, y, ksize=sobel_kernel)\n",
+    "    sobel = SblFltrXY(img,(sobel_kernel,sobel_kernel))\n",
     "    \n",
     "    # Take the absolute value of the derivative or gradient\n",
     "    abs_sobel = np.absolute(sobel)\n",
@@ -194,9 +314,9 @@
     "    # Calculate gradient magnitude\n",
     "    # Take the gradient in x and y separately\n",
     "    '''Modificar esta función'''\n",
-    "    sobelx = cv2.Sobel(image, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "    sobelx = SblFltrX(image,(sobel_kernel,sobel_kernel))\n",
     "    '''Modificar esta función'''\n",
-    "    sobely = cv2.Sobel(image, cv2.CV_64F, 0, 1, ksize=sobel_kernel)\n",
+    "    sobely = SblFltrY(image,(sobel_kernel,sobel_kernel))\n",
     "    \n",
     "    # Calculate the magnitude \n",
     "    abs_sobel = np.sqrt(sobelx**2 +sobely**2)\n",
@@ -213,9 +333,9 @@
     "    # Calculate gradient direction\n",
     "    # Take the gradient in x and y separately\n",
     "    '''Modificar esta función'''\n",
-    "    sobelx = cv2.Sobel(image, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "    sobelx = SblFltrX(image,(sobel_kernel,sobel_kernel))\n",
     "    '''Modificar esta función'''\n",
-    "    sobely = cv2.Sobel(image, cv2.CV_64F, 0, 1, ksize=sobel_kernel)\n",
+    "    sobely = SblFltrY(image,(sobel_kernel,sobel_kernel))\n",
     "\n",
     "    # Take the absolute value of the x and y gradients\n",
     "    abs_sobelx = np.absolute(sobelx)   \n",
