--- a/algebra_canny_edge-master/Proyecto Algebra Lineal.ipynb
+++ b/algebra_canny_edge-master/Proyecto Algebra Lineal.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +67,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A=np.sqrt(25)\n",
+    "print A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -112,15 +122,14 @@
     "              \n",
     "                prom=(Op*HKernel).sum()\n",
     "                D[i][j]=prom \n",
-    "                D[i][j]=sqrt((D[i][j]**2)) #Horizontal \n",
+    "                D[i][j]=np.sqrt((D[i][j]**2)) #Horizontal \n",
     "                \n",
-    "        return D\n",
-    "          \n"
+    "        return D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -166,20 +175,20 @@
     "                \n",
     "                pr=(Op*VKernel).sum()\n",
     "                Vert[i][j]=pr\n",
-    "                Vert[i][j]=sqrt((Vert[i][j]**2)) #Vertical\n",
+    "                Vert[i][j]=np.sqrt((Vert[i][j]**2)) #Vertical\n",
     "\n",
     "        return Vert          \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def SblFltrXY(img, kernel = 3):\n",
+    "def SblFltrXY(img, x, y):\n",
     "        D=img\n",
     "        E=D.shape[0]\n",
     "        F=D.shape[1]\n",
@@ -204,33 +213,50 @@
     "        nu=HKernel.sum()\n",
     "        HKernel=HKernel/nu\n",
     "        Op=np.empty((3,3))\n",
+    "        \n",
+    "        if x==1:\n",
     "\n",
-    "        for i in range(0,E-1): \n",
-    "            for j in range(0,F-1):\n",
-    "                    G[i+1][j+1]=D[i][j]\n",
-    "            \n",
+    "            for i in range(0,E-1): \n",
+    "                for j in range(0,F-1):\n",
+    "                        G[i+1][j+1]=D[i][j]\n",
     "\n",
-    "        for i in range(0,H-3): \n",
-    "            for j in range(0,I-3):\n",
-    "                \n",
-    "                for k in range (0,3):\n",
-    "                    for l in range (0,3):\n",
-    "                        Op[k][l]=G[i+k][j+l]                \n",
-    "              \n",
-    "                prom=(Op*HKernel).sum()\n",
-    "                D[i][j]=prom \n",
-    "                D[i][j]=sqrt((D[i][j]**2)) #Horizontal \n",
-    "                \n",
-    "                pr=(Op*VKernel).sum()\n",
-    "                Vert[i][j]=pr\n",
-    "                Vert[i][j]=sqrt((Vert[i][j]**2)) #Vertical\n",
-    "        return D, Vert\n",
-    "          \n"
+    "\n",
+    "            for i in range(0,H-3): \n",
+    "                for j in range(0,I-3):\n",
+    "                    \n",
+    "                    for k in range (0,3):\n",
+    "                        for l in range (0,3):\n",
+    "                            Op[k][l]=G[i+k][j+l]\n",
+    "\n",
+    "                    prom=(Op*HKernel).sum()\n",
+    "                    D[i][j]=prom \n",
+    "                     #Horizontal \n",
+    "            return D\n",
+    "    \n",
+    "        if y==1:\n",
+    "\n",
+    "            for i in range(0,E-1): \n",
+    "                for j in range(0,F-1):\n",
+    "                            G[i+1][j+1]=D[i][j]\n",
+    "\n",
+    "\n",
+    "            for i in range(0,H-3): \n",
+    "                for j in range(0,I-3):\n",
+    "\n",
+    "                    for k in range (0,3):\n",
+    "                        for l in range (0,3):\n",
+    "                                Op[k][l]=G[i+k][j+l]\n",
+    "\n",
+    "                        pr=(Op*VKernel).sum()\n",
+    "                        Vert[i][j]=pr\n",
+    "                        \n",
+    "            return Vert\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -271,15 +297,12 @@
     "                    Op[k][l]=G[i+k][j+l]                   \n",
     "            prom=(Op*GKernel).sum()\n",
     "            D[i][j]=prom   \n",
-    "    return D           \n",
-    "    \n",
-    "\n",
-    " "
+    "    return D           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,8 +319,8 @@
     "        x,y = 0,1\n",
     "        \n",
     "    '''Modificar esta función'''\n",
-    "    sobel = SblFltrXY(img,(sobel_kernel,sobel_kernel))\n",
-    "    \n",
+    "    sobel = SblFltrXY(img,x,y)\n",
+    "    return sobel\n",
     "    # Take the absolute value of the derivative or gradient\n",
     "    abs_sobel = np.absolute(sobel)\n",
     "\n",
@@ -315,8 +338,10 @@
     "    # Take the gradient in x and y separately\n",
     "    '''Modificar esta función'''\n",
     "    sobelx = SblFltrX(image,(sobel_kernel,sobel_kernel))\n",
+    "    return sobelx\n",
     "    '''Modificar esta función'''\n",
     "    sobely = SblFltrY(image,(sobel_kernel,sobel_kernel))\n",
+    "    return sobely\n",
     "    \n",
     "    # Calculate the magnitude \n",
     "    abs_sobel = np.sqrt(sobelx**2 +sobely**2)\n",
@@ -334,8 +359,10 @@
     "    # Take the gradient in x and y separately\n",
     "    '''Modificar esta función'''\n",
     "    sobelx = SblFltrX(image,(sobel_kernel,sobel_kernel))\n",
+    "    return sobelx\n",
     "    '''Modificar esta función'''\n",
     "    sobely = SblFltrY(image,(sobel_kernel,sobel_kernel))\n",
+    "    return sobely\n",
     "\n",
     "    # Take the absolute value of the x and y gradients\n",
     "    abs_sobelx = np.absolute(sobelx)   \n",
@@ -359,9 +386,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:13: RuntimeWarning: divide by zero encountered in divide\n",
+      "  del sys.path[0]\n",
+      "C:\\ProgramData\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:13: RuntimeWarning: invalid value encountered in divide\n",
+      "  del sys.path[0]\n",
+      "C:\\ProgramData\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:24: RuntimeWarning: divide by zero encountered in divide\n",
+      "C:\\ProgramData\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:24: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\ProgramData\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:41: RuntimeWarning: invalid value encountered in multiply\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "cannot convert float NaN to integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-23cdac378961>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# Apply each of the thresholding functions\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mgradx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabs_sobel_thresh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'x'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msobel_kernel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mksize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthresh\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mgrady\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabs_sobel_thresh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'y'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msobel_kernel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mksize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthresh\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mmag_binary\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmag_thresh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msobel_kernel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mksize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmag_thresh\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-6-8142000b93a0>\u001b[0m in \u001b[0;36mabs_sobel_thresh\u001b[1;34m(img, orient, sobel_kernel, thresh)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;34m'''Modificar esta función'''\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[0msobel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSblFltrXY\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0msobel\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;31m# Take the absolute value of the derivative or gradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-4-8b1bddc93c2c>\u001b[0m in \u001b[0;36mSblFltrXY\u001b[1;34m(img, x, y)\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m                     \u001b[0mprom\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOp\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mHKernel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m                     \u001b[0mD\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mprom\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m                      \u001b[1;31m#Horizontal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mD\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot convert float NaN to integer"
+     ]
+    }
+   ],
    "source": [
     "# Test filter on single image\n",
     "im = plt.imread(\"BTD.jpg\")\n",
